<resources>
    <string name="app_name">PesanPalgading</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="todo">TODO</string>
    <string name="login">Login</string>
    <string name="nama">Nama</string>
    <string name="meja">Meja</string>
    <string name="refresh">Refresh</string>
    <string name="edit_manual">Edit Manual</string>
    <string name="kode_meja">Kode Meja</string>
    <string name="masuk">Masuk</string>
    <string name="lihat_menu">Lihat Menu</string>
    <string-array name="NomorMeja">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5/6</item>
        <item>7</item>
        <item>8/9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
</resources>